--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.caratlane.test.DiamondRings" hash-for-method="verifyDiamondRings">verifyDiamondRings</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.caratlane.test.VerifyBangleDetails" hash-for-method="VerifyGoldBangles">VerifyGoldBangles</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.caratlane.test.DiamondRings</span>
+              <span class="class-name">com.caratlane.test.VerifyBangleDetails</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyDiamondRings">
-                  </a> <!-- verifyDiamondRings -->
-                  <span class="method-name">verifyDiamondRings</span>
+                  <a name="VerifyGoldBangles">
+                  </a> <!-- VerifyGoldBangles -->
+                  <span class="method-name">VerifyGoldBangles</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse--1000758267/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse-715369276/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.caratlane.test.DiamondRings&quot;/&gt;
+      &lt;class name=&quot;com.caratlane.test.VerifyBangleDetails&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyDiamondRings')
-data.setCell(0, 2, 'com.caratlane.test.DiamondRings')
-data.setCell(0, 3, 16578);
+data.setCell(0, 1, 'VerifyGoldBangles')
+data.setCell(0, 2, 'com.caratlane.test.VerifyBangleDetails')
+data.setCell(0, 3, 21204);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 21 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -205,9 +205,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">verifyDiamondRings</span>
+              <span class="reporter-method-name">VerifyGoldBangles</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Diamond Rings Displayed</span>
+                <span class="reporter-method-output">Title is matching</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -225,18 +225,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.caratlane.test.DiamondRings</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.caratlane.test.VerifyBangleDetails</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">openApp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyDiamondRings</span>
-                <span class="method-start">7558 ms</span>
+                <span class="method-name">VerifyGoldBangles</span>
+                <span class="method-start">8653 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeApp</span>
-                <span class="method-start">25432 ms</span>
+                <span class="method-start">30582 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
