--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6dabbc">  <td>17/11/17 18:15:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:com.caratlane.test.DiamondRings@4883b407]">&gt;&gt;openApp</td> 
-<td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>17/11/17 18:15:41</td>   <td>7555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DiamondRings.verifyDiamondRings()[pri:0, instance:com.caratlane.test.DiamondRings@4883b407]">verifyDiamondRings</td> 
-  <td>main@230835489</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>17/11/17 18:15:59</td>   <td>25429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.caratlane.test.DiamondRings@4883b407]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>17/11/30 14:47:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:com.caratlane.test.VerifyBangleDetails@39c0f4a]">&gt;&gt;openApp</td> 
+<td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>17/11/30 14:47:50</td>   <td>8652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyBangleDetails.VerifyGoldBangles()[pri:0, instance:com.caratlane.test.VerifyBangleDetails@39c0f4a]">VerifyGoldBangles</td> 
+  <td>main@1847509784</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>17/11/30 14:48:12</td>   <td>30582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.caratlane.test.VerifyBangleDetails@39c0f4a]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
 </table>
