--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,2 +1,2 @@
-<h2>Reporter output</h2><table><tr><td>Diamond Rings Displayed</td></tr>
+<h2>Reporter output</h2><table><tr><td>Title is matching</td></tr>
 </table>
